Skip to content

GitLab

  • Projects
  • Groups
  • Snippets
  • Help
    • Loading...
  • Help
    • Help
    • Support
    • Community forum
    • Submit feedback
    • Contribute to GitLab
  • Sign in
E
evolution-data-server
  • Project overview
    • Project overview
    • Details
    • Activity
    • Releases
  • Repository
    • Repository
    • Files
    • Commits
    • Branches
    • Tags
    • Contributors
    • Graph
    • Compare
  • Issues 37
    • Issues 37
    • List
    • Boards
    • Labels
    • Service Desk
    • Milestones
  • Merge Requests 0
    • Merge Requests 0
  • CI / CD
    • CI / CD
    • Pipelines
    • Jobs
    • Schedules
  • Operations
    • Operations
    • Incidents
    • Environments
  • Packages & Registries
    • Packages & Registries
    • Container Registry
  • Analytics
    • Analytics
    • CI / CD
    • Repository
    • Value Stream
  • Wiki
    • Wiki
  • Snippets
    • Snippets
  • Members
    • Members
  • Collapse sidebar
  • Activity
  • Graph
  • Create a new issue
  • Jobs
  • Commits
  • Issue Boards
  • GNOME
  • evolution-data-server
  • Issues
  • #166

Closed
Open
Opened Dec 08, 2018 by Jason Haar@jhaar

Remembers last connection error for too long

Detailed description of the issue. Put as much information as you can, potentially with images showing the issue.

Steps to reproduce:

  1. have calendar configured to poll nextcloud and google accounts for calendar details (I have both - but this error seems specific to the google connector). This would have actually been set up via gnome-online-accounts (I'm using Ubuntu-18.04)
  2. connect to (say) a hotel network where you have to authenticate via a hotspot/portal before gaining Internet access
  3. gnome-calendar appears to detect that it's attempts to connect to the backend calendaring services results in seeing a cert that isn't correct (eg its outbound connections to google.com port 443 were intercepted by the hotspot until I successfully authenticated/etc) - so it sees the hotspot cert instead of google.com
  4. days later after leaving that particular hotspot network, I see random "cert error" popups telling me an invalid TLS server is involved. eg right now I'm at home on my WPA2 Wifi network (ie no portal/hotspot) and I'm seeing popups from the hotel hotspot I was last using days ago... I can't even recall seeing those errors when I was in the hotel - where they would have made much more sense. I'd give you a screen shot but I closed them - and they don't seem to recur on any consistent basis - but they will come back,,,

BTW it took me days to figure out that gnome-calendar was behind this. I also the same calendar with Chrome and Thunderbird/Lightning so was wondering what application was behind this as the error popup doesn't mention an application name. In the end I had to run "xwininfo -a" and click on the popup for it to tell me the PID - and that pointed to gnome-calendar. You really should put the app name in the popup details...

Edited Oct 18, 2019 by Milan Crha
To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information
Assignee
Assign to
None
Milestone
None
Assign milestone
Time tracking
None
Due date
None
Reference: GNOME/evolution-data-server#166