I#166 - Remembers last connection error for too long

Closes https://gitlab.gnome.org/GNOME/evolution-data-server/issues/166